docs/styles.css
/* ... */
@media (min-width: 768px){
  .mobile-menu{
    margin-top: 5rem;
  }
}

.desktop-about-icon {
  display: inline-block;
  margin-left: 0.25rem;
  width: 0.5rem;
}

.desktop-hover-menu {
  min-width: 100px;
  --bg-opacity: 1;
  background-color: #fff;
  background-color: rgba(255, 255, 255, var(--bg-opacity));
  border-radius: 0.25rem;
  display: none;
}

.group:hover .desktop-hover-menu{
  display: flex;
}

.desktop-hover-menu{
  flex-direction: column;
  justify-content: space-evenly;
  font-weight: 300;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  position: absolute;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
  --text-opacity: 1;
  color: #434343;
  color: rgba(67, 67, 67, var(--text-opacity));
  z-index: 50;
}

.desktop-about-menu {
  min-width: 120px;
}

.desktop-about-menu-es {
  min-width: 140px;
}

.desktop-about-menu-pt {
  min-width: 130px;
}

.footer {
  --bg-opacity: 1;
  background-color: #00B696;
  background-color: rgba(0, 182, 150, var(--bg-opacity));
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
  --text-opacity: 1;
  color: #fff;
  color: rgba(255, 255, 255, var(--text-opacity));
}

.footer .footer-icons:hover {
  transform: scale(1.2);
  filter: invert(64%) sepia(39%) saturate(843%) hue-rotate(131deg) brightness(200%) contrast(97%);
}

@media (min-width: 768px){
  .footer{
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

@media (min-width: 1680px){
  .footer{
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 640px){
  .sm\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .sm\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .sm\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .sm\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .sm\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .sm\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .sm\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .sm\:container{
      max-width: 1920px;
    }
  }

  .sm\:block{
    display: block;
  }

  .sm\:mr-0{
    margin-right: 0;
  }

  .sm\:mt-10{
    margin-top: 2.5rem;
  }

  .sm\:pl-10{
    padding-left: 2.5rem;
  }

  .sm\:w-1\/2{
    width: 50%;
  }

  .sm\:w-2\/3{
    width: 66.666667%;
  }
}

@media (min-width: 768px){
  .md\:container{
    width: 100%;
  }

  @media (min-width: 640px){
    .md\:container{
      max-width: 640px;
    }
  }

  @media (min-width: 768px){
    .md\:container{
      max-width: 768px;
    }
  }

  @media (min-width: 1024px){
    .md\:container{
      max-width: 1024px;
    }
  }

  @media (min-width: 1280px){
    .md\:container{
      max-width: 1280px;
    }
  }

  @media (min-width: 1440px){
    .md\:container{
      max-width: 1440px;
    }
  }

  @media (min-width: 1680px){
    .md\:container{
      max-width: 1680px;
    }
  }

  @media (min-width: 1920px){
    .md\:container{
      max-width: 1920px;
    }
  }

  .md\:bg-filler{
    background-color: rgba(172, 224, 215, 0.05);
  }

  .md\:border-solid{
    border-style: solid;
  }

  .md\:block{
    display: block;
  }

  .md\:flex{
    display: flex;
  }

  .md\:hidden{
    display: none;
  }

  .md\:flex-row{
    flex-direction: row;
  }

  .md\:flex-col{
    flex-direction: column;
  }

  .md\:flex-no-wrap{
    flex-wrap: nowrap;
  }

  .md\:items-baseline{
    align-items: baseline;
  }

  .md\:justify-start{
    justify-content: flex-start;
  }

  .md\:justify-between{
    justify-content: space-between;
  }

  .md\:justify-around{
    justify-content: space-around;
  }

  .md\:text-3xl{
    font-size: 1.875rem;
  }

  .md\:text-5xl{
    font-size: 3rem;
  }

  .md\:my-0{
    margin-top: 0;
    margin-bottom: 0;
  }

  .md\:my-10{
    margin-top: 2.5rem;
    margin-bottom: 2.5rem;
  }

  .md\:my-20{
    margin-top: 5rem;
    margin-bottom: 5rem;
  }

  .md\:mx-20{
    margin-left: 5rem;
    margin-right: 5rem;
  }

  .md\:mt-0{
    margin-top: 0;
  }

  .md\:mb-0{
    margin-bottom: 0;
  }

  .md\:mr-8{
    margin-right: 2rem;
  }

  .md\:mt-12{
    margin-top: 3rem;
  }

  .md\:mb-12{
    margin-bottom: 3rem;
  }

  .md\:mb-16{
    margin-bottom: 4rem;
  }

  .md\:mt-20{
    margin-top: 5rem;
  }

  .md\:mb-20{
    margin-bottom: 5rem;
  }

  .md\:mb-32{
    margin-bottom: 8rem;
  }

  .md\:mb-48{
    margin-bottom: 12rem;
  }

  .md\:mb-64{
    margin-bottom: 16rem;
  }

  .md\:py-4{
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .md\:px-16{
    padding-left: 4rem;
    padding-right: 4rem;
  }

  .md\:pl-0{
    padding-left: 0;
  }

  .md\:pr-1{
    padding-right: 0.25rem;
  }

  .md\:pr-2{
    padding-right: 0.5rem;
  }

  .md\:absolute{
    position: absolute;
  }

  .md\:text-center{
    text-align: center;
  }

  .md\:w-1\/2{
    width: 50%;
  }

  .md\:w-1\/3{
    width: 33.333333%;
  }

  .md\:w-4\/12{
    width: 33.333333%;
  }

  .md\:w-5\/12{
    width: 41.666667%;
  }

  .md\:w-7\/12{
    width: 58.333333%;
  }

  .md\:w-8\/12{
    width: 66.666667%;
  }

  .md\:w-10\/12{
    width: 83.333333%;
  }

  .md\:w-11\/12{
    width: 91.666667%;
  }

  .md\:row-gap-8{
    grid-row-gap: 2rem;
    row-gap: 2rem;
  }

  .md\:grid-cols-2{
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:col-span-1{
    grid-column: span 1 / span 1;
  }
}
/* ... */

